objects/X7S_Event_Reg_Field__mdt/X7S_Event_Reg_Field__mdt.object-meta.xml
<CustomObject>
    <description>7S Event Registration Field</description>
    <label>7S Event Reg Field</label>
    <pluralLabel>7S Event Reg Fields</pluralLabel>
</CustomObject>