objects/X7S_Event_Reg_Field__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Field Label</description>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>