objects/X7S_Event_Reg_Field__mdt/fields/Tooltip_Text__c.field-meta.xml
<CustomField>
    <fullName>Tooltip_Text__c</fullName>
    <description>Text to display as tooltip.</description>
    <label>Tooltip Text</label>
    <type>TextArea</type>
</CustomField>